--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@
 #gameContainer {
     display: grid;
     grid-template-columns: repeat(3, 100px);
-    grid-template-rows: repeat(3, 100px);
-    width: 320px
+    grid-template-rows: repeat(4, 100px);
+    width: 320px;
 }
 
 .allContainer {
@@ -24,4 +24,11 @@
 .buttons {
     display: flex;
     justify-content: center;
+}
+
+#results {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
 }
